[package]
name = "kaspa_message_signer"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39 = "1.2.0"
hex = "0.4.3"
kaspa-addresses = "0.15.0" 
kaspa-bip32 = "0.15.0"
secp256k1 = "0.26.0"
sha2 = "0.10.6"
rand = "0.8.5"
rand_core = "0.4"
num_cpus = "1.15.0"
bs58 = "0.4.0"
byteorder = "1.4.3"
rpassword = "7.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'  # Remove panic unwinding code
strip = true     # Strip symbols from binary
